@@ -1,29 +1,99 @@
 <?php
 /**
  * @version		$Id$
+ * @package		Joomla.Administrator
+ * @subpackage	com_contact
  * @copyright	Copyright (C) 2005 - 2010 Open Source Matters, Inc. All rights reserved.
  * @license		GNU General Public License version 2 or later; see LICENSE.txt
  */
 
-// no direct access
+// No direct access.
 defined('_JEXEC') or die;
 
 jimport('joomla.application.component.controlleradmin');
 
 /**
+ * Articles list controller class.
+ *
  * @package		Joomla.Administrator
- * @subpackage	com_content
+ * @subpackage	com_contact
  * @since	1.6
  */
 class ContactControllerContacts extends JControllerAdmin
 {
 	/**
-	 * Proxy for getModel
+	 * Constructor.
+	 *
+	 * @param	array	$config	An optional associative array of configuration settings.
+	 *
+	 * @return	ContactControllerContacts
+	 * @see		JController
 	 * @since	1.6
 	 */
-	function &getModel($name = 'Contact', $prefix = 'ContactModel')
+	public function __construct($config = array())
+	{
+		parent::__construct($config);
+
+		$this->registerTask('unfeatured',	'featured');
+	}
+
+	/**
+	 * Method to toggle the featured setting of a list of contacts.
+	 *
+	 * @return	void
+	 * @since	1.6
+	 */
+	function featured()
+	{
+		// Check for request forgeries
+		JRequest::checkToken() or jexit(JText::_('JINVALID_TOKEN'));
+
+		// Initialise variables.
+		$user	= JFactory::getUser();
+		$ids	= JRequest::getVar('cid', array(), '', 'array');
+		$values	= array('featured' => 1, 'unfeatured' => 0);
+		$task	= $this->getTask();
+		$value	= JArrayHelper::getValue($values, $task, 0, 'int');
+
+		// Access checks.
+		foreach ($ids as $i => $id)
+		{
+			if (!$user->authorise('core.edit.state', 'com_contact.contact.'.(int) $id)) {
+				// Prune items that you can't change.
+				unset($ids[$i]);
+				JError::raiseNotice(403, JText::_('JERROR_CORE_EDIT_STATE_NOT_PERMITTED'));
+			}
+		}
+
+		if (empty($ids)) {
+			JError::raiseWarning(500, JText::_('COM_CONTACT_NO_ITEM_SELECTED'));
+		}
+		else {
+			// Get the model.
+			$model = $this->getModel();
+
+			// Publish the items.
+			if (!$model->featured($ids, $value)) {
+				JError::raiseWarning(500, $model->getError());
+			}
+		}
+
+		$this->setRedirect('index.php?option=com_contact&view=contacts');
+	}
+
+	/**
+	 * Proxy for getModel.
+	 *
+	 * @param	string	$name	The name of the model.
+	 * @param	string	$prefix	The prefix for the PHP class name.
+	 *
+	 * @return	JModel
+	 * @since	1.6
+	 */
+	public function &getModel($name = 'Contact', $prefix = 'ContactModel')
 	{
 		$model = parent::getModel($name, $prefix, array('ignore_request' => true));
+
 		return $model;
 	}
 }
