@@ -69,8 +69,6 @@ COM_CONTACT_FIELD_CONFIG_SESSION_CHECK_LABEL="Session Check"
 COM_CONTACT_FIELD_CONFIG_STATE_DESC="Show/Hide a State column in the list of Contacts."
 COM_CONTACT_FIELD_CONFIG_SUBURB_DESC="Show/Hide a City or Suburb column in the list of Contacts."
 COM_CONTACT_FIELD_CONFIG_SUBURB_LABEL="City or Suburb"
-COM_CONTACT_FIELD_CONFIG_TABLE_HEADINGS_DESC="Table Headings"
-COM_CONTACT_FIELD_CONFIG_TABLE_HEADINGS_LABEL="Table Headings"
 COM_CONTACT_FIELD_CONFIG_TABLE_OF_CONTACTS_DESC="These settings apply for Contact List options unless they are changed for a specific menu item."
 COM_CONTACT_FIELD_CONFIG_TABLE_OF_CONTACTS_LABEL="List Layout"
 COM_CONTACT_FIELD_CONFIG_VCARD_DESC="Show/Hide a vCard column in the list of Contacts."
@@ -92,7 +90,6 @@ COM_CONTACT_FIELD_EMAIL_REDIRECT_LABEL="Contact Redirect"
 COM_CONTACT_FIELD_EMAIL_SHOW_FORM_DESC="Show or Hide contact form."
 COM_CONTACT_FIELD_EMAIL_SHOW_FORM_LABEL="Show Contact Form"
 COM_CONTACT_FIELD_FEATURED_DESC="If marked yes, will be displayed in featured view."
-COM_CONTACT_FIELD_FEATURED_LABEL="Featured"
 COM_CONTACT_FIELD_FEEDLINK_DESC="Show/Hide a feed link for this contact category"
 COM_CONTACT_FIELD_FEEDLINK_LABEL="Feed link"
 COM_CONTACT_FIELD_ICONS_ADDRESS_DESC="Select the Address icon. If none selected, the default icon will be displayed."
@@ -253,6 +250,9 @@ COM_CONTACT_SHOW_EMAIL_ADDRESS_DESC="Show Email Address"
 COM_CONTACT_SHOW_EMAIL_ADDRESS_LABEL="Email Address"
 COM_CONTACT_SUBMENU_CATEGORIES="Categories"
 COM_CONTACT_SUBMENU_CONTACTS="Contacts"
+COM_CONTACT_TOGGLE_TO_FEATURE="Toggle to change contact state to 'Featured'"
+COM_CONTACT_TOGGLE_TO_UNFEATURE="Toggle to change contact state to 'Unfeatured'"
+COM_CONTACT_UNFEATURED="Unfeatured contact"
 COM_CONTACT_WARNING_CATEGORY="This category is invalid"
 COM_CONTACT_WARNING_PROVIDE_VALID_NAME="Please provide a valid name"
 COM_CONTACT_WARNING_PROVIDE_VALID_URL="Please provide a valid URL"
